# contextshield

./: CONTEXTSHIELD_OVERVIEW.txt  README.md  docker-compose.yml
backend/: .env  Dockerfile  app.py  config.py  deps.py  pyproject.toml  requirements.txt
backend/pii/: detectors.py  policy.py  presidio.py  redactor.py
backend/policies/: demo.yaml
backend/routers/: __init__.py  audit.py  demo.py  policy.py  proxy.py
backend/store/: db.py  events.py  models.py  schema.py
backend/utils/: luhn.py  sse.py  ws.py
web/: Dockerfile  components.json  package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/api/demo/: route.ts
web/app/api/demo/complete/: route.ts
web/app/api/events/: route.ts
web/app/api/policy/[tenant]/: route.ts
web/app/dashboard/: page.tsx
web/app/events/: page.tsx
web/app/policies/: page.tsx
web/components/: aurora.tsx  charts.tsx  editor-policy.tsx  feature-card.tsx  kpi-cards.tsx  nav.tsx  pii-diff.tsx  redaction-table.tsx  section-heading.tsx
web/components/ui/: background-grid.tsx  badge.tsx  bento-grid.tsx  button.tsx  card.tsx  textarea.tsx
web/lib/: api.ts  sockets.ts
web/styles/: globals.css
